--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@
         </div>
     </main>
 
-    <section class="">
+    <section class="secao-dance">
         <div class="cabecalho-secao">
-            <h2>Titulo Seção</h2>
+            <h2>Dance Tour</h2>
             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Illum, beatae dolore libero modi ratione eligendi numquam officia reiciendis inventore f
                 acere perspiciatis! Non eaque necessitatibus
                  perspiciatis. Impedit veritatis excepturi nesciunt soluta!</p>
@@ -55,6 +55,26 @@
                     </div>
                     <div class="card-conteudo">
                         <h3>America</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed unde volu
+                            ptatem dolore obcaecati, delectus quae!</p>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="card-img">
+                        <figure><img src="/img/sec-img2.png" alt="" srcset=""></figure>
+                    </div>
+                    <div class="card-conteudo">
+                        <h3>Asia</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed unde volu
+                            ptatem dolore obcaecati, delectus quae!</p>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="card-img">
+                        <figure><img src="/img/sec-img3.png" alt="" srcset=""></figure>
+                    </div>
+                    <div class="card-conteudo">
+                        <h3>Australia</h3>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed unde volu
                             ptatem dolore obcaecati, delectus quae!</p>
                     </div>
